send signal to daemon -> transfer / backup

--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,6 @@
 CC = gcc
-objects = daemon.o collect_reports.o backup_dashboard.o lock_directories.o unlock_directories.o generate_reports.o check_file_uploads.o
+objects = daemon.o collect_reports.o backup_dashboard.o lock_directories.o unlock_directories.o generate_reports.o check_file_uploads.o sig_handler.o
 headers = daemon_tasks.h
-flags = -Wall -g
 
 daemon: $(objects) 
 	$(CC) -o daemon $(objects)
@@ -29,6 +28,10 @@ generate_reports.o: generate_reports.c
 
 check_file_uploads.o: check_file_uploads.c
 	$(CC) -c check_file_uploads.c
+	
+
+sig_handler.o: sig_handler.c
+	$(CC) -c sig_handler.c
 
 
 clean:
