--- a/src/makefile
+++ b/src/makefile
@@ -1,9 +1,9 @@
 CC = gcc
-objects = daemon.o collect_reports.o backup_dashboard.o lock_directories.o unlock_directories.o generate_reports.o check_file_uploads.o sig_handler.o
+objects = daemon.o collect_reports.o backup_dashboard.o lock_directories.o unlock_directories.o generate_reports.o check_file_uploads.o sig_handler.o update_timer.o 
 headers = daemon_tasks.h
 
-daemon: $(objects) 
-	$(CC) -o daemon $(objects)
+my_daemon: $(objects) 
+	$(CC) -o my_daemon $(objects)
 
 daemon.o: daemon.c $(headers)
 	$(CC) -c daemon.c
@@ -32,6 +32,10 @@ check_file_uploads.o: check_file_uploads.c
 
 sig_handler.o: sig_handler.c
 	$(CC) -c sig_handler.c
+
+
+update_timer.o: update_timer.c
+	$(CC) -c update_timer.c
 
 
 clean:
